# faupi

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  TODO.md  test.yaml
src/: error.rs  import.rs  main.rs  server.rs  specs.rs
src/args/: action.rs  args_struct.rs  import.rs  mod.rs  serve.rs  serve_args.rs
src/server/: endpoint.rs  mod.rs  router.rs  router_node.rs  server_struct.rs
src/server/url/: error.rs  mod.rs  parser.rs  segment.rs  token.rs  var.rs
src/specs/: method.rs  mock_config.rs  mod.rs  response.rs  spec.rs  specs_struct.rs  status_code.rs
src/specs/body/: body.rs  dynamic.rs  fake.rs  mod.rs  type_constraint.rs
src/specs/response/: mod.rs  multi_response.rs  response.rs  strategy.rs
src/specs/template/: mod.rs  template_value.rs
