[package]
name = "faupi"
version = "0.1.0"
edition = "2024"

[dependencies]
http-body-util = "0.1.3"
hyper = { version = "1.7.0", features = ["http1", "server"] }
hyper-util = { version = "0.1.16", features = ["tokio"] }
notify = "8.2.0"
pareg = "0.10.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
serde_yaml = "0.9.34"
termal = "4.1.0"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["macros", "net", "rt", "rt-multi-thread"] }
